click and drag works but it is flickering a lot, need to fix that

--- a/katalozi/katalog1/katalog1.css
+++ b/katalozi/katalog1/katalog1.css
@@ -183,7 +183,7 @@
     }
 
     .bodyClass {
-        overflow: visible;
+        overflow: scroll;
     }
 
     .magazine, .page, .pageFront, .pageBack {
